--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,15 @@ body {
 }
 
 .container {
-  padding: 0.6rem;
+  padding-bottom: 1rem;
+  height: 10%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: black;
+  position: fixed;
+  z-index: 1;
 }
 
 .landing {
@@ -38,6 +42,7 @@ body {
 
 .pledge-bar {
   background: #e22222;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,6 +90,12 @@ body {
 .btn-secondary:focus {
   background: #b91818;
 }
+
+.link {
+  color: #fff;
+  /* text-decoration: none */
+}
+
 .pledgeCount {
   color: #fff;
   font-size: 1.6rem;
@@ -119,7 +130,7 @@ nav {
 .open-side-menu {
   position: absolute;
   top: 12px;
-  right: 12px;
+  right: 8px;
   padding: 0.8rem;
   color: #fff;
   font-family: "Catamaran", "Open Sans", Arial, Helvetica, sans-serif;
@@ -156,8 +167,24 @@ nav {
   padding: 1rem 0rem;
 }
 
-.about {
-  background: red;
+.sub-nav {
+  position: absolute;
+  top: 100%;
+  background: black;
+  width: 100%;
+}
+
+.sub-nav-item {
+  padding: 0 0.3rem;
+  color: #878a90;
+  font-family: "Catamaran", "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  text-decoration: none;
+  text-align: center;
+}
+
+.sub-nav-item:hover {
+  border-bottom: 2px solid #e22222;
 }
 
 /* footer {
@@ -176,8 +203,10 @@ nav {
 }
 
 .nav-logo {
-  height: 65px;
-  width: auto;
+  width: 65%;
+  position: absolute;
+  left: 5%;
+  top: 18%;
 }
 
 .cd-monogram {
@@ -200,27 +229,49 @@ nav {
 .tagline {
   font-size: 1rem;
   margin-bottom: 0.5rem;
-}
-
-.tagline h1 {
-}
-
-h3,
-h4 {
+  display: none;
   color: #fff;
-  font-size: 1rem;
+}
+
+.curr-tag {
+  display: block;
 }
 
 .nav-item,
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Catamaran", "Open Sans", Arial, Helvetica, sans-serif;
 }
 
 body {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 1.3rem;
-  color: #fff;
+  font-size: 1rem;
+  color: #878a90;
+}
+
+/* About Structure */
+main {
+  padding: 35% 1rem;
+  color: #171819;
+}
+
+.text-is-red {
+  color: #e22222;
+}
+
+.text-is-blue {
+  color: #00164c;
+}
+
+.anchor a {
+  position: absolute;
+  left: 0;
+  top: -100px;
+}
+
+.anchor {
+  position: relative;
 }
 
 @media (min-width: 479px) {
@@ -235,14 +286,31 @@ body {
   }
   .nav-item {
     font-size: 0.8rem;
+    color: #fff;
   }
   .open-side-menu {
     display: none;
   }
   .landing {
-    background: url("../img/happy-oldman.jpg") no-repeat;
+    background: url("../img/mclaren.jpg") no-repeat;
     background-size: cover;
+    background-position: center;
+  }
+
+  .showcase {
+    display: block;
+    position: absolute;
+    top: 30%;
+    left: 5%;
+  }
+
+  .logo {
+    width: 400px;
   }
 }
 
-/* @meda (min-width: 1080px); */
+@media (min-width: 1280px) {
+  .showcase {
+    left: 10%;
+  }
+}
